Change deployment branch from 'main' to 'master'

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Home Server
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   workflow_dispatch: # Allows manual trigger from GitHub UI
 
 jobs:
