--- a/nginx/rofael.net.conf
+++ b/nginx/rofael.net.conf
@@ -11,19 +11,17 @@ server {
     listen [::]:443 ssl http2;
     server_name rofael.net;
 
-    # SSL certificates (Let's Encrypt)
+    # SSL certificates
     ssl_certificate /etc/letsencrypt/live/rofael.net/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/rofael.net/privkey.pem;
 
     # SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
+    ssl_prefer_server_ciphers off;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
 
     # Proxy to Docker container
     location / {
@@ -32,10 +30,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_redirect off;
-        proxy_buffering off;
-        proxy_http_version 1.1;
     }
 
     # Logs
