--- a/nginx/rofael.net.conf
+++ b/nginx/rofael.net.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name rofael.net;
+    server_name rofael.net www.rofael.net;
 
     return 301 https://$host$request_uri;
 }
@@ -9,7 +9,7 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name rofael.net;
+    server_name rofael.net www.rofael.net;
 
     # SSL certificates
     ssl_certificate /etc/letsencrypt/live/rofael.net/fullchain.pem;
