--- a/nginx/rofael.net.conf
+++ b/nginx/rofael.net.conf
@@ -1,3 +1,8 @@
+upstream rofael_backend {
+    server 127.0.0.1:8081 max_fails=1 fail_timeout=10s;
+    server 127.0.0.1:8082 max_fails=1 fail_timeout=10s backup;
+}
+
 server {
     listen 80;
     listen [::]:80;
@@ -25,11 +30,12 @@ server {
 
     # Proxy to Docker container
     location / {
-        proxy_pass http://127.0.0.1:8081;
+        proxy_pass http://rofael_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_next_upstream error timeout http_502 http_503 http_504;
     }
 
     # Logs
