--- a/nginx/rofael.net.conf
+++ b/nginx/rofael.net.conf
@@ -38,6 +38,26 @@ server {
         proxy_next_upstream error timeout http_502 http_503 http_504;
     }
 
+    location /api/ip-version {
+        add_header Content-Type application/json;
+        add_header Access-Control-Allow-Origin *;
+
+        # Use CF-Connecting-IP header for the real client IP
+        set $real_ip $http_cf_connecting_ip;
+
+        # Fallback to remote_addr if header is missing (no CF proxy)
+        if ($real_ip = "") {
+            set $real_ip $remote_addr;
+        }
+
+        set $ip_version "ipv4";
+        if ($real_ip ~* ":") {
+            set $ip_version "ipv6";
+        }
+
+        return 200 '{"version":"$ip_version","ip":"$real_ip"}';
+    }
+
     # Logs
     access_log /var/log/nginx/rofael.net.access.log;
     error_log /var/log/nginx/rofael.net.error.log;
