Make the backends equal

--- a/nginx/rofael.net.conf
+++ b/nginx/rofael.net.conf
@@ -1,6 +1,6 @@
 upstream rofael_backend {
     server 127.0.0.1:8081 max_fails=1 fail_timeout=10s;
-    server 127.0.0.1:8082 max_fails=1 fail_timeout=10s backup;
+    server 127.0.0.1:8082 max_fails=1 fail_timeout=10s;
 }
 
 server {
@@ -36,6 +36,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_next_upstream error timeout http_502 http_503 http_504;
+        proxy_connect_timeout 2s;
+        proxy_read_timeout 30s;
     }
 
     location /api/ip-version {
