--- a/nginx/rofael.net.conf
+++ b/nginx/rofael.net.conf
@@ -52,12 +52,7 @@ server {
             set $real_ip $remote_addr;
         }
 
-        set $ip_version "ipv4";
-        if ($real_ip ~* ":") {
-            set $ip_version "ipv6";
-        }
-
-        return 200 '{"version":"$ip_version","ip":"$real_ip"}';
+        return 200 '{"ip":"$real_ip"}';
     }
 
     # Logs
