--- a/nginx/rofael.net.conf
+++ b/nginx/rofael.net.conf
@@ -28,6 +28,28 @@ server {
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
 
+    # Static assets (hashed filenames)
+    location ~* \.(css|js|png|jpg|jpeg|gif|svg|woff2?)$ {
+        proxy_pass http://rofael_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        add_header Cache-Control "public, max-age=31536000, immutable" always;
+    }
+
+    # HTML — always revalidate
+    location ~* \.html$ {
+        proxy_pass http://rofael_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        add_header Cache-Control "no-cache" always;
+    }
+
     # Proxy to Docker container
     location / {
         proxy_pass http://rofael_backend;
